Finished - proof read before submitting

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,9 @@
 \usepackage{charter}
 \usepackage{ragged2e}
 \usepackage[margin=2cm]{geometry}
+%Citation---------------------------------------------------------
+\usepackage{apacite}
+
 %-----------------------------------------------------------------
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
@@ -23,46 +26,28 @@ Word Count:
 \hrule
 %-------------------------------------------------------------------
 \begin{center}
-\huge Collectivizing Harm
+\huge Collectivizing Harm\\[.2cm]
+\large A criminological analysis of the Soviet Union's collectivization policy. 
 \end{center}
 %-------------------------------------------------------------------
+The Soviet collective farms policy was an initiative envisioned to stimulate the declining productivity of the agriculture sector of the Soviet Union. Utilising the power of socialism and promises of modernity and industrialization, Joseph Stalin looked to propel the Union of Soviet Socialist Republics (USSR) into a new age of prosperity known as \textit{The Great Breakthrough} \cite{Hughes1991}. The process he undertook to introduce this policy is one wrought with violence, social coercion and abuse of state powers. This paper will analyse the process and repercussions of the collectivization process as a form of state crime. This analysis will utilise the harm-based definition outlined presented by \cite{STEVETOMBSandDAVEWHYTE2002} and how this policy resulted in the targetted genocide of the Kulak class \cite{Meierhenrich}. The Kulaks were a class of prosperous peasants that owned and controlled the agricultural sector prior to collectivization. The use of a harm-based definition of crime is applied here due to the state's actions in criminalizing any form of protest to the collectivization policy. This provided the structural support for the state to demonise the Kulaks whilst rendering their unjust treatment as lawful under Stalin's \textit{Ural-Siberian Method} \cite{ViolaTheCountryside}. This 'method' enhanced the state's power to dispossess and displace individuals within the agricultural sector. These structural platforms presented opportunities for Stalin to stigmatize the Kulaks in public statements. The language in these statements was used to segregate the Kulak class, rally public support and establish a narrative of 'us verse them'. By removing any form of political or social support from the Kulak class, the state was able to operate with minimal resistance. The effects of collectivization resulted in widespread famine throughout the USSR, causing mass famine and death to millions of its citizens.\par
 
-Choose a case of corporate or state crime and use it to illustrate
-and discuss the theoretical and empirical issues discussed in class\par
-
-The collectivization of farms within the Soviet Union was a policy spearheaded by the General Secretary of the Communist Party of the Soviet Union, Joseph Stalin. During the years from 1928 to 1940, the Soviet Union looked to transform the agricultural sector. Stalin's motivation for the collective farm initiative were twofold. Primarily, the policy would dismantle the capitalist model of private farming purported by the Kulak class. The Kulaks were a class perceived somewhat as 'prosperous peasants' who maintained the land and sold its yield. As a result, the Kulak class was perceived as a threat to socialism as they would often hold onto their grain reserves for a more prosperous time in the market. Stalin's policy of collectivization would disenfranchise the Kulaks and place their land in state control. Secondly, Stalin believed that collectivized farms could pave the way for industrialization and provide a greater economical and agricultural yield for the state and its people. The collective-farm policy was anticipated as a force of mobilization to combat grain shortages. The policy saw some success in the sheer quantity of grain that was produced however the restrictions on workers from withholding grain thoroughly undermined their efforts. This, combined with high work-quotas saw that peasants then received less for their labour than before. Ultimately the reality of output of the farms did not meet the projections. As a result Stalin enacted the \textit{Ural-Siberian method} to rectify the poor results. What began as a tool of social coercion transformed into a process of genocide. It provided the state with the power to dispossess, deport and execute \cite{Hughes, 1994} individuals perceived to be sabotaging the collective farm policy. A set of punishments were set in place that would incur heavy fines for not meeting grain quotas, followed by the acquisition of their property by the state. The final punishment was exile and execution, a fate that was endured by over 10 million individuals. While this policy was enacted legally, a harm-based approach to the subject suggests its a state-crime of genocide.
+The collectivization of farms in the Soviet Union was a policy spearheaded by the General Secretary of the Communist Party of the Soviet Union, Joseph Stalin. During the years from 1928 to 1940. Stalin's motivation for the collectivization policy was to dismantle the capitalist model of private farming purported by the Kulak class. In doing so, the state would gain control of the farming sector as a means for economic gain \cite{Hughes1994}. The collective-farm policy was also anticipated as a means of combat the deteriorating crop yields from the Kulaks' private market. The initial years were met with fierce resistance, facing various forms of rural resistance including protests, terrorism and sabotaging their own crop \cite{Marker1998}. These protests severely limited the state's grain production and hindered the collectivization process. Not to be deterred, Stalin enacted the \textit{Ural-Siberian method} to rectify the poor results. It provided the state with the power to punish those resisting with heavy fines, dispossession and forced relocation \cite{Hughes1994}. Farmers were given quotas of grain to provide the state, failure to meet this quota was enough to be perceived as resisting. Subsequently they were dispossessed of their land and grain reserves, then sent to forced labour camps in Siberia \cite{Kalashnikov2018}. It is estimated that up to 10 million households were displaced, with an estimated mortality rate of 30 percent \cite{Khlevniuk2004TheTerror}. In the following 12 months the state's control of farms had increased from 7.4 to 60 percent \cite{Khlevniuk2004TheTerror}. The subsequent years saw the state sell its grain to the European markets in order to purchase goods for the industrialisation and mechanisation of the farming sector, a decision that was made knowing that the remaining grain would not be sufficient to feed the populace \cite{Hughes1991}. This resulted in famine in many rural areas throughout the USSR. The state refused to provide relief to areas struck by the famine and citizens were denied mobility to prevent them from entering other parts of the state \cite{Livi-Bacci1993OnUnion}, resulting in the estimated deaths of over 9 million soviet citizens. These events showcase that the collectivization policy was a strategy to disenfranchise the peasantry for the economic gain of the state. It was a form of state crime fulfilled with deliberation and malice.
 \par
-The Ural-Siberian method was a form of state-crime that resulted in the deaths of over 10 million people. Stalin's introduction of the Ural-Siberian method through state apparatus ensured that the states actions were not illegal, however through the lens of harm-based definitions it is clear that the policy is a form of state-enacted genocide. 
+Stalin's introduction of the Ural-Siberian method through state apparatus ensured that the state's actions were not illegal, however by utilising a harm-based definition, it is clear that the policy was a form of state crime and genocide. Crime is generally measured according to the confines of the law, however, as the state is inherently responsible for the rule-of-law, this approach can be problematic. A harm-based definition attempts to define crime according to broader set of violations. Green \& Ward \citeyear{Green2000} define state crime as the violation of human rights; a definition that is divided into two paradigms, the health paradigm and the torture paradigm. This analysis will be utilising the health paradigm, which states that all individuals are entitled to the materialistic necessities for well-being such as shelter, food, water, medicine, recreational experiences and, security from repressive or imperialistic elites. The harm that the collectivisation policy inflicted was two-fold, the first is the unjust treatment and punishment of the Kulaks. This process is referred to as 'dekulakization' \cite{Meierhenrich}. The second is the resulting famine that occurred throughout its inception. The process of criminalizing and punishing the Kulaks became punishments were a form of social coercion \cite{Viola2005}. While imprisoned, prisoners were subjected to harsh physical labour, meager food rations, inadequate clothing, overcrowding and deprived of any real form of hygiene or healthcare \cite{khlevniuk2004}.The second form of harm was the famine that was incurred through collectivization. The state's focus on bolstering economic growth occurred at the cost of citizen exploitation and death. The high death toll as a direct result of the state's actions renders these acts as systematic genocide \cite{Meierhenrich}. \par
 
+The state utilised the media to control shape the narrative of the collectivization policy and control public opinion, and perception. The example that this paper wants to focus on is a public statement made by Stalin. During the initial stages of collectivization, he famously announced "Now we have the opportunity to carry out a resolute offensive against the Kulaks, break their resistance, eliminate them as a class and replace their production with the production of kolkhozes and sovkhozes" (Conquest, 1986). The kolkhozes and sovkhozes refer to forms of collective farms. The use of military-styled language in his address invites the sentiments of warfare into the narrative. In the words of Matzaa and Sykes \citeyear{Matza1964}, this is a technique of neutralisation referred to as \textit{denial of the victim}. Typically, war is not perceived as a victim and offender relationship, but a contest of winners and losers. Words such as offensive and resistance suggest that there is a contest between two factions, instead of a government instigating class warfare on a targeted demographic. The re-occuring use of 'their' fundamentally places the reader in alliance with Stalin, and labels the Kulak class as a political enemy \cite{Neubacher2006}. This technique is useful in creating a binary mode of thought to further divide the two sides. Tombs \& Whyte \citeyear{STEVETOMBSandDAVEWHYTE2002} briefly discuss this technique in the American context. After September 11 2001, the "you are either with us or against us" rhetoric was in full swing and removed any critique or discussion of the state's actions. Those who spoke out risked being silenced or labelled a "terrorist sympathiser". Stalin's address achieved the same outcome, labelling the enemy as a means of establishing that 'us verse them' mentality in Soviet citizens.\par
 
-Define what the criteria is for state crime and how the collectivization of farms fits (harm definition) \par
-
-Analyze a text from Stalin's address the justifies his actions and his policy using the various forms of  techniques of neutralisation. Dizzy with success as a response to farmers resisting collectivization. Liquidate\par
-
-Using a form of hard control (violence)? \par
-
-
-
-
-
-
-
-
-% \cite{Robbins2017}.
+This paper discussed the events of the Soviet Collectivization policy as a form of genocide enacted by the state. The policy unfairly targeted and criminalised the Kulak class, allowing for their dispossession and exile within lawful terms.  This paper argued that these measures imposed by the state resulted in the deaths of over 9.5 million people and therefore qualify for genocide. A critical crimonoligcal theory suggests that the forced relocation of many of the Kulak class submitted them to inhumane treatment with deprivation of civil liberties, nutrition and freedom is a form of state crime. These policies and actions of the state were imposed with support of the people due to a vigorous public education of the state narrative. This was achieved by the public addresses of Stalin and his demonisation of the Kulak class. A linguistic analysis of his addresses relays a story of warfare between the state and the Kulak class, rallying the public to further demonize them. The use of linguistics in this way serves to remove any middle-ground from the two sides and allowed the state to criminalise and remove the class with minimal resistance from the public. In sum, the collectivisation policy was state crime committed on an enormous scale. Its consequences speak for themselves in regards to the unfair detention and deprivation of human rights and multi-million deaths as a result of the subsequent famine that the policy caused.
 
 %--------------------------------------------------------------------
 
 \newpage
-\bibliographystyle{apalike}
+\bibliographystyle{apacite}
 \bibliography{ref.bib}
 
-%--------------------------------------------------------------------
-%\newpage
-%\begin{thebibliography}{}
-%\bibitem{article}
-%Gat, O. (2018). Estonia goes digital: Residents of the tiny Baltic nation are going all %in on techno-governance. World Policy Journal, 35(1), 108–113. %https://doi.org/10.1215/07402775-6894885
-%\bibitem{book}
-%Robbins, J. (2017). Two Lenins. In HAU Books.
-%\end{thebibliography}
+%\bibliography{myrefs, hisrefs, herrefs}
+
+
 %---------------------------------------------------------------------
 \end{document}
