--- a/ref.bib
+++ b/ref.bib
@@ -1,10 +1,550 @@
+@article{Moses2000,
+    title = {{An antipodean genocide? The origins of the genocidal moment in the colonization of Australia}},
+    year = {2000},
+    journal = {Journal of Genocide Research},
+    author = {Moses, A. Dirk},
+    number = {1},
+    pages = {89--106},
+    volume = {2},
+    doi = {10.1080/146235200112427},
+    issn = {1462-3528}
+}
+
+@misc{Stewart1996,
+    title = {{An Occupied Place}},
+    year = {1996},
+    booktitle = {Senses of Place},
+    author = {Stewart, Kathleen},
+    pages = {137--165}
+}
+
+@incollection{Kusserow2017,
+    title = {{Anthropoetry}},
+    year = {2017},
+    booktitle = {Experiments in Ethnographic Writing},
+    author = {Kusserow, Adrie}
+}
+
+@book{Hughes1994,
+    title = {{Capturing the Russian Peasantry: Stalinist Grain Procurement Policy and the “Ural-Siberian Method”}},
+    year = {1994},
+    booktitle = {Slavic Review},
+    author = {Hughes, James},
+    number = {1},
+    pages = {76--103},
+    volume = {53},
+    doi = {10.2307/2500326},
+    issn = {0037-6779}
+}
+
+@article{Solska2011,
+    title = {{Citizenship, collective identity and the international impact on integration policy in Estonia, Latvia and Lithuania}},
+    year = {2011},
+    journal = {Europe - Asia Studies},
+    author = {Solska, Magdalena},
+    number = {6},
+    pages = {1089--1108},
+    volume = {63},
+    doi = {10.1080/09668136.2011.585762},
+    issn = {09668136}
+}
+
+@article{Briggs2011,
+    title = {{Communicability in Contemporary Society}},
+    year = {2011},
+    journal = {Current Anthropology},
+    author = {Briggs, Charles L},
+    number = {4},
+    pages = {551--580},
+    volume = {48},
+    isbn = {0011-3204},
+    doi = {10.1146/annurev.anthro.34.081804.120618},
+    issn = {0011-3204},
+    pmid = {200725840}
+}
+
+@article{ShleiferAVishny1993,
+    title = {{Corruption}},
+    year = {1993},
+    author = {Shleifer, A {\&} Vishny, RW},
+    number = {3},
+    pages = {599--617},
+    volume = {108}
+}
+
+@book{Matza1964,
+    title = {{Delinquency and Drift}},
+    year = {1964},
+    booktitle = {Delinquency and Drift},
+    author = {Matza, David and Sykes, Gresham},
+    editor = {Society, California. University. Center for the Study of Law and},
+    pages = {1--199},
+    publisher = {New York : Wiley},
+    address = {New York},
+    isbn = {9781351523035},
+    doi = {10.4324/9780203793596},
+    issn = {00071315},
+    keywords = {Criminal psychology, Juvenile delinquency}
+}
+
+@article{Braithwaite2010,
+    title = {{Diagnostics of white-collar crime prevention}},
+    year = {2010},
+    journal = {Criminology {\&} Public Policy},
+    author = {Braithwaite, John},
+    number = {3},
+    pages = {621--626},
+    volume = {9},
+    doi = {10.1111/j.1745-9133.2010.00655.x},
+    issn = {1745-9133}
+}
+
+@article{Sullivan2017,
+    title = {{E-residency and blockchain}},
+    year = {2017},
+    journal = {Computer Law and Security Review},
+    author = {Sullivan, Clare and Burger, Eric},
+    number = {4},
+    pages = {470--481},
+    volume = {33},
+    publisher = {Elsevier Ltd},
+    url = {http://dx.doi.org/10.1016/j.clsr.2017.03.016},
+    isbn = {5111120130},
+    doi = {10.1016/j.clsr.2017.03.016},
+    issn = {02673649},
+    keywords = {Blockchain, Data protection, Digital identity, E-Residency, KYC, Right to identity}
+}
+
+@article{Smith2012,
+    title = {{Enacting identities in the EU-Russia borderland: An ethnography of place and public monuments}},
+    year = {2012},
+    journal = {East European Politics and Societies},
+    author = {Smith, David J. and Burch, Stuart},
+    number = {2},
+    pages = {400--424},
+    volume = {26},
+    doi = {10.1177/0888325411415403},
+    issn = {08883254},
+    keywords = {Estonia, Heritage, Identity, Monuments, Narva, Nationalism, Photoelicitation, Place}
+}
+
+@article{Gat2018,
+    title = {{Estonia goes digital: Residents of the tiny Baltic nation are going all in on techno-governance}},
+    year = {2018},
+    journal = {World Policy Journal},
+    author = {Gat, Orit},
+    number = {1},
+    pages = {108--113},
+    volume = {35},
+    doi = {10.1215/07402775-6894885},
+    issn = {19360924}
+}
+
+@article{Kranking2016,
+    title = {{Historical dictionary of Estonia (2nd edition) , by Toivo Miljan, Historical Dictionaries of Europe, Lanham, Rowman {\&} Littlefield, 2015, ISBN 978-0-8108-7244-8, 978-0-8108-7513-5 }},
+    year = {2016},
+    journal = {Journal of Baltic Studies},
+    author = {Kranking, Glenn Eric},
+    number = {2},
+    pages = {275--276},
+    volume = {47},
+    isbn = {9780810872448},
+    doi = {10.1080/01629778.2016.1179458},
+    issn = {0162-9778}
+}
+
+@article{Arthur2009,
+    title = {{How "transitions" reshaped human rights: A conceptual history of transitional justice}},
+    year = {2009},
+    journal = {Human Rights Quarterly},
+    author = {Arthur, Paige},
+    number = {2},
+    pages = {321--367},
+    volume = {31},
+    doi = {10.1353/hrq.0.0069},
+    issn = {02750392}
+}
+
+@article{Neubacher2006,
+    title = {{How Can it Happen that Horrendous State Crimes are Perpetrated?}},
+    year = {2006},
+    author = {Neubacher, Frank},
+    url = {https://heinonline.org/HOL/License},
+    doi = {10.1093/jicj/mq1047}
+}
+
+@incollection{Bauman2010,
+    title = {{Introduction: Sociology after the Holocaust}},
+    year = {2010},
+    booktitle = {Modernity and the Holocaust},
+    author = {Bauman, Z.},
+    pages = {1--71},
+    publisher = {Cornell University Press},
+    address = {New York}
+}
+
+@incollection{Meierhenrich,
+    title = {{Introduction: The Study and History of Genocide}},
+    year = {2010},
+    booktitle = {Genocide},
+    author = {Meierhenrich, Jens},
+    pages = {3--55},
+    publisher = {Oxford University Press},
+    address = {New York},
+    isbn = {9780195377668}
+}
+
+@incollection{Taneja2019a,
+    title = {{Jinnealogy : Time, Islam, and Ecological Thought in the Medieval Ruins of Delhi}},
+    year = {2019},
+    booktitle = {Jinnealogy : Time, Islam, and Ecological Thought in the Medieval Ruins of Delhi},
+    author = {Taneja, Anand Vivek},
+    number = {August},
+    pages = {1--18},
+    isbn = {9780199943418},
+    doi = {10.1093/oxfordhb/9780199943418.013.29},
+    keywords = {analytical just war theory, conflict-related mortality, ethics of war, morality, responsibility}
+}
+
+@article{Green2011,
+    title = {{Language of Lullabies: The Russification and De-Russification of the Baltic States}},
+    year = {2011},
+    journal = {SSRN Electronic Journal},
+    author = {Green, Sonia Bychkov},
+    doi = {10.2139/ssrn.1261425}
+}
+
+@article{Kobin2013,
+    title = {{Making sense of risk: Young Estonians drink-driving}},
+    year = {2013},
+    journal = {Drugs: Education, Prevention and Policy},
+    author = {Kobin, Maarja},
+    number = {6},
+    pages = {473--481},
+    volume = {20},
+    doi = {10.3109/09687637.2013.767319},
+    issn = {09687637}
+}
+
+@article{Munck2016,
+    title = {{Modes of Transition and Democratization : South America and Eastern Europe in Comparative Perspective Author ( s ): Gerardo L . Munck and Carol Skalnik Leff Source : Comparative Politics , Vol . 29 , No . 3 , Transitions to Democracy : A Special Issue in }},
+    year = {2016},
+    author = {Munck, Gerardo L and Leff, Carol Skalnik},
+    number = {3},
+    pages = {343--362},
+    volume = {29}
+}
+
+@book{Marker1998,
+    title = {{Peasant Rebels under Stalin: Collectivization and the Culture of Peasant Resistance}},
+    year = {1996},
+    booktitle = {Oxford University Press},
+    author = {Viola, Lynne},
+    address = {New York}
+}
+
+@phdthesis{Martinez2018,
+    title = {{Remains of the Soviet Past in Estonia}},
+    year = {2018},
+    booktitle = {Remains of the Soviet Past in Estonia},
+    author = {Mart{\'{i}}nez, Francisco},
+    pages = {0--18},
+    doi = {10.2307/j.ctv3hh4dr}
+}
+
+@incollection{Taneja2019,
+    title = {{Saintly Visions: The Ethics of Elsewhen}},
+    year = {2019},
+    author = {Taneja, Anand Vivek},
+    number = {August},
+    pages = {1--18},
+    isbn = {9780199943418},
+    doi = {10.1093/oxfordhb/9780199943418.013.29},
+    keywords = {analytical just war theory, conflict-related mortality, ethics of war, morality, responsibility}
+}
+
+@article{Cole1992,
+    title = {{Some observations on migration within and from the former USSR in the 1990s}},
+    year = {1992},
+    journal = {Post-Soviet Geography},
+    author = {Cole, J. P. and Filatotchev, I. V.},
+    number = {7},
+    pages = {432--453},
+    volume = {33},
+    doi = {10.1080/10605851.1992.10640907},
+    issn = {10605851}
+}
+
+@article{Svet2013,
+    title = {{Staging the transnistrian identity within the heritage of Soviet holidays}},
+    year = {2013},
+    journal = {History and Anthropology},
+    author = {{\c{S}}veţ, Ala},
+    number = {1},
+    pages = {98--116},
+    volume = {24},
+    doi = {10.1080/02757206.2012.759326},
+    issn = {02757206},
+    keywords = {Nation-Building, Official Holidays, Regional Identity, The State, Transnistrian}
+}
+
+@book{Hughes1991,
+    title = {{Stalin, Siberia and the Crisis of the New Economic Policy}},
+    year = {1991},
+    booktitle = {Cambridge University Press},
+    author = {Hughes, James},
+    address = {Cambridge},
+    doi = {10.2307/130756},
+    issn = {00360341}
+}
+
+@article{Green2000,
+    title = {{State Crime, Human Rights, And the Limits of Criminology}},
+    year = {2000},
+    journal = {Social Justice},
+    author = {Green, Penny J and Ward, Tony},
+    number = {1},
+    pages = {101--115},
+    volume = {27},
+    doi = {10.1080/09574040701400205},
+    issn = {10431578}
+}
+
+@article{Annist2013,
+    title = {{Studying Home Fields: Encounters of Ethnology and Anthropology in Estonia}},
+    year = {2013},
+    journal = {Journal of Baltic Studies},
+    author = {Annist, Aet and Kaaristo, Maarja},
+    number = {2},
+    pages = {121--151},
+    volume = {44},
+    doi = {10.1080/01629778.2013.775846},
+    issn = {01629778},
+    keywords = {Estonian ethnology, ethnography, fieldwork methods, history of anthropology}
+}
+
+@article{Clancy2014,
+    title = {{Survey of Academic Field Experiences (SAFE): Trainees report harassment and assault}},
+    year = {2014},
+    journal = {PLoS ONE},
+    author = {Clancy, Kathryn B.H. and Nelson, Robin G. and Rutherford, Julienne N. and Hinde, Katie},
+    number = {7},
+    pages = {1--9},
+    volume = {9},
+    doi = {10.1371/journal.pone.0102172},
+    issn = {19326203}
+}
+
+@book{Conquest1986,
+    title = {{The Harvest of Sorrow: Soviet Collectivization and the Terror-Famine}},
+    year = {1986},
+    booktitle = {Oxford University Press},
+    author = {Conquest, Robert},
+    publisher = {Oxford University Press},
+    address = {New York}
+}
+
+@book{Khlevniuk2004,
+    title = {{The history of the gulag: From collectivization to the great terror}},
+    year = {2004},
+    booktitle = {The History of the Gulag: From Collectivization to the Great Terror},
+    author = {Khlevniuk, Oleg V},
+    pages = {1--442},
+    publisher = {Yale University Press},
+    isbn = {9780300092844},
+    doi = {10.2307/20034320},
+    issn = {00157120}
+}
+
+@article{Clark1992,
+    title = {{The Iinguistics of blame reporting of crirnes of sexual violence}},
+    year = {1992},
+    author = {Clark, Kate},
+    number = {1992}
+}
+
+@book{Kalashnikov2018,
+    title = {{The Soviet Gulag: evidence, interpretation, and comparison}},
+    year = {2016},
+    author = {Kalashnikov, Antony},
+    publisher = {Pittsburgh University Press},
+    address = {Pittsburgh PA},
+    isbn = {9780822944645}
+}
+
+@article{Joo2008,
+    title = {{The Soviet origin of Russian chauvinism: Voices from below}},
+    year = {2008},
+    journal = {Communist and Post-Communist Studies},
+    author = {Joo, Hyung min},
+    number = {2},
+    pages = {217--242},
+    volume = {41},
+    doi = {10.1016/j.postcomstud.2008.03.002},
+    issn = {0967067X},
+    keywords = {Chauvinism, Russian nationalism, Slavophilism}
+}
+
+@incollection{Jackson2018c,
+    title = {{The Varieties of Temporal Experience}},
+    year = {2018},
+    booktitle = {The Varieties of Temporal Experience},
+    author = {Jackson, Michael},
+    chapter = {1}
+}
+
+@book{Viola2005,
+    title = {{The War Against the Peasantry , 1927 – 1930 : The Tragedy of the Soviet Countryside}},
+    year = {2005},
+    author = {Viola, Lynne},
+    publisher = {Yale University Press},
+    address = {New Haven}
+}
+
+@incollection{Taneja2019b,
+    title = {{Translation}},
+    year = {2019},
+    booktitle = {Jinnealogy : Time, Islam, and Ecological Thought in the Medieval Ruins of Delhi},
+    author = {Taneja, Anand Vivek},
+    pages = {149--180}
+}
+
+@incollection{Taneja2019ab,
+    title = {{Translation}},
+    year = {2019},
+    booktitle = {Jinnealogy : Time, Islam, and Ecological Thought in the Medieval Ruins of Delhi},
+    author = {Taneja, Anand Vivek and Conversations, Unusual},
+    number = {August},
+    pages = {1--18},
+    isbn = {9780199943418},
+    doi = {10.1093/oxfordhb/9780199943418.013.29},
+    keywords = {analytical just war theory, conflict-related mortality, ethics of war, morality, responsibility}
+}
+
 @book{Robbins2017,
-abstract = {What time is it? Many. In this incandescent book, we learn that time is always composite, a relation among things, made of conflicting simultaneities, teleologies, and eternities. Working through the timely and untimely worlds of 1920s Soviet Russia and 1990s indigenous Siberia, Ssorin-Chaikov delivers a dazzling brief for how exchanges among market, gift, and state {\ldots}},
-author = {Robbins, Joel},
-booktitle = {HAU Books},
-file = {:C$\backslash$:/Users/Aaron/Documents/MRES/Theses/Literature/Robbins - 2017 - Two Lenins.pdf:pdf},
-isbn = {9780997367539},
-title = {{Two Lenins}},
-url = {https://haubooks.org/two-lenins/{\%}0Ainternal-pdf://0.0.4.208/two-lenins.html},
-year = {2017}
+    title = {{Two Lenins}},
+    year = {2017},
+    booktitle = {HAU Books},
+    author = {Robbins, Joel},
+    url = {https://haubooks.org/two-lenins/%0Ainternal-pdf://0.0.4.208/two-lenins.html},
+    isbn = {9780997367539}
+}
+
+@article{STEVETOMBSandDAVEWHYTE2002,
+    title = {{Unmasking the Crimes of the Powerful}},
+    year = {2003},
+    journal = {Critical Criminology},
+    author = {Tombs, Steve and Whyte, Dave},
+    number = {3},
+    pages = {217--236},
+    volume = {11},
+    doi = {10.1023/b:crit.0000005811.87302.17},
+    issn = {1205-8629}
+}
+
+@article{Kramer2005,
+    title = {{War, aggression and state crime}},
+    year = {2005},
+    journal = {British Journal of Criminology},
+    author = {Kramer, Ronald C. and Michalowski, Raymond J.},
+    number = {4},
+    pages = {446--469},
+    volume = {45},
+    doi = {10.1093/bjc/azi032},
+    issn = {00070955}
+}
+
+@article{Berg1997CulturalRegion,
+    title = {{Cultural perspectives on the Lake Peipsi Region}},
+    year = {1997},
+    journal = {Journal of Baltic Studies},
+    author = {Berg, Eiki},
+    number = {4},
+    pages = {369--381},
+    volume = {28},
+    doi = {10.1080/01629779700000151},
+    issn = {01629778}
+}
+
+@incollection{Conversations2019DesiringWomen,
+    title = {{Desiring women}},
+    year = {2019},
+    booktitle = {Jinnealogy : Time, Islam, and Ecological Thought in the Medieval Ruins of Delhi},
+    author = {Conversations, Unusual},
+    pages = {117--148}
+}
+
+@article{2014FollowingUnivers,
+    title = {{Following Politics : Russian Youth Activism in Post-Socialist Latvia By Alexandre B Beliaev A dissertation submitted in partial satisfaction of the requirements for the degree of Doctor of Philosophy in Anthropology in the Graduate Division of the Univers}},
+    year = {2014}
+}
+
+@incollection{Baba2019InDelhi,
+    title = {{in Post-Partition Delhi}},
+    year = {2019},
+    author = {Baba, Wale},
+    pages = {19--54}
+}
+
+@book{Pedersen2017NotShamans,
+    title = {{Not Quite Shamans}},
+    year = {2017},
+    booktitle = {Not Quite Shamans},
+    author = {Pedersen, Morten Axel},
+    doi = {10.7591/9780801460937}
+}
+
+@article{Livi-Bacci1993OnUnion,
+    title = {{On the human costs of collectivization in the Soviet Union}},
+    year = {1993},
+    journal = {Population {\&} Development Review},
+    author = {Livi-Bacci, M.},
+    number = {4},
+    pages = {743--766},
+    volume = {19},
+    doi = {10.2307/2938412},
+    issn = {00987921}
+}
+
+@article{Houston2010OutlineAnthropology,
+    title = {{Outline of an Approach to Phenomenological Anthropology}},
+    year = {2010},
+    author = {Houston, Christopher},
+    pages = {1--19}
+}
+
+@article{Studies2019ReviewHttps://www.jstor.org/stable/153338,
+    title = {{Review Reviewed Work ( s ): The Finno-Ugric Republics and the Russian State by Rein Taagepera Review by : Nicholas Hope Stable URL : https://www.jstor.org/stable/153338}},
+    year = {2019},
+    author = {Studies, Source Europe-asia and Jun, No},
+    number = {4},
+    pages = {778--780},
+    volume = {52}
+}
+
+@incollection{Intimacy2019STRANGENESS,
+    title = {{STRANGE ( R ) NESS}},
+    year = {2019},
+    author = {Intimacy, Nameless and Strangers, Hospitality T O},
+    pages = {89--116}
+}
+
+@incollection{Kotla2019TheHistory,
+    title = {{The theater of history}},
+    year = {2019},
+    author = {Kotla, Firoz Shah and Kotla, Firoz Shah and Muhammad, Sultan and Karnad, Girish and Kotla, Firoz Shah},
+    pages = {1--18}
+}
+
+@article{Pontell2005UnmaskingCorporations,
+    title = {{Unmasking the Crimes of the Powerful: Scrutinizing States and Corporations}},
+    year = {2005},
+    journal = {Contemporary Sociology: A Journal of Reviews},
+    author = {Pontell, Henry N.},
+    number = {2},
+    pages = {192--193},
+    volume = {34},
+    isbn = {0820456918},
+    doi = {10.1177/009430610503400254},
+    issn = {0094-3061}
 }
